--- a/Index.html
+++ b/Index.html
@@ -8,22 +8,24 @@
 </head>
 <body>
     <main>
-        <h1>Christian Fernandes dos Santos</h1>
+        <h1 class="titulopricipal">Christian Fernandes dos Santos</h1>
         <h2>Quem Sou Eu?</h2>
-        <p>
+        <p class="paragrafoconteudo">
             Prazer sou o Christian Fernandes dos Santos, estudante de Engenharia de Software na Uninter. Atualmente tenho 19 anos, moro em Governador Valadares MG,<!-- a trabalhar-->
         </p>
         <h3>Meu Hobbies Favoritos</h3>
         <ul>
             <li>Gosto de jogar videogames em momentos casuais.
-                <img src="Imagens/Jogando.png" alt="Jogando videogames">
             </li>
-            <li>Gosto de assistir partidas competitivas de jogos diversos.
-                <img src="Imagens/palco.jpg" alt="Palco de jogos">
+            <img src="Imagens/Jogando.png" alt="Jogando videogames">
+            
+            <li>Gosto de assistir partidas competitivas de jogos.
             </li>
+            <img src="Imagens/palco.jpg" alt="Palco de jogos">
+            
             <li>Gosto de ir ao cinema com a namorada ou amigos.
-                <img src="Imagens/Cinema.jpg" alt="Sala de cinema">
             </li>
+             <img src="Imagens/Cinema.jpg" alt="Sala de cinema">
         </ul>
         <table>
             <caption>Países que gostaria de visitar</caption>
