--- a/Index.html
+++ b/Index.html
@@ -14,45 +14,45 @@
             Prazer sou o Christian Fernandes dos Santos, estudante de Engenharia de Software na Uninter. Atualmente tenho 19 anos, moro em Governador Valadares MG,<!-- a trabalhar-->
         </p>
         <h3>Meu Hobbies Favoritos</h3>
-        <ul>
-            <li>Gosto de jogar videogames em momentos casuais.
-            </li>
-            <img src="Imagens/Jogando.png" alt="Jogando videogames">
+            <ul>
+                <li>Gosto de jogar videogames em momentos casuais.
+                </li>
+                <img src="Imagens/Jogando.png" alt="Jogando videogames">
             
-            <li>Gosto de assistir partidas competitivas de jogos.
-            </li>
-            <img src="Imagens/palco.jpg" alt="Palco de jogos">
+                <li>Gosto de assistir partidas competitivas de jogos.
+                </li>
+                <img src="Imagens/palco.jpg" alt="Palco de jogos">
             
-            <li>Gosto de ir ao cinema com a namorada ou amigos.
-            </li>
-             <img src="Imagens/Cinema.jpg" alt="Sala de cinema">
-        </ul>
+                <li>Gosto de ir ao cinema com a namorada ou amigos.
+                </li>
+                 <img src="Imagens/Cinema.jpg" alt="Sala de cinema">
+            </ul>
         <table>
             <caption>Países que gostaria de visitar</caption>
 
             <tr>
-                <td>França</td>
+                <td class="pais">França</td>
                 <td>
                     <img src="Imagens/paris-france.jpg" alt="Imagen de Paris na França">
                 </td>
             </tr>
 
              <tr>
-                <td>Grécia</td>
+                <td class="pais">Grécia</td>
                 <td>
                     <img src="Imagens/grecia.jpg" alt="Imagem de uma cidade na Grécia">
                 </td>
             </tr>
 
              <tr>
-                <td>Suíça</td>
+                <td class="pais">Suíça</td>
                 <td>
                     <img src="Imagens/suiça.jpg" alt="Imagem de um lugar na Suíça">
                 </td>
             </tr>
         </table>
-        <p>
-            Por fim, gostaria de convidá-los ao meu repositótio público do GitHub - <img src="icones/icone-github.png" alt="icone-github"><a href="https://github.com/Chrisfss" target="_blank" rel="external">/Chrisfss</a>
+        <p class="interesse">
+            Por fim, gostaria de convidá-los ao meu repositótio público do GitHub <br> <img src="icones/icone-github.png" alt="icone-github"><a href="https://github.com/Chrisfss" target="_blank" rel="external">/Chrisfss</a>
         </p>
     </main>
     <footer>
