--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
     <title>Trabalho FDS</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="Imagens/Christian.ico" type="image/x-icon">
+    <script src="script.js"></script>
 </head>
 <body>
     <main>
@@ -53,11 +54,12 @@
             </tr>
         </table>
         <p class="interesse">
-            Por fim, gostaria de convidá-los ao meu repositótio público do GitHub <br> <img src="icones/icone-github.png" alt="icone-github"><a href="https://github.com/Chrisfss" target="_blank" rel="external">/Chrisfss</a>
+            Por fim, gostaria de convidá-los ao meu repositótio público do GitHub. <br> <img src="icones/icone-github.png" alt="icone-github"><a href="https://github.com/Chrisfss" target="_blank" rel="external">/Chrisfss</a>
         </p>
     </main>
     <footer>
         <p>Site feito por Christian Fernandes</p>
+        <button id="botao">Clique aqui</button>
     </footer>
 </body>
 </html>
