--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 class="titulopricipal">Christian Fernandes dos Santos</h1>
         <h2>Quem Sou Eu?</h2>
         <p class="paragrafoconteudo">
-            Prazer sou o Christian Fernandes dos Santos, estudante de Engenharia de Software na Uninter. Atualmente tenho 19 anos, moro em Governador Valadares MG.<!-- a trabalhar-->
+            Prazer sou o Christian Fernandes dos Santos, estudante de Engenharia de Software na Uninter. Atualmente tenho 19 anos, moro em Governador Valadares MG.
         </p>
         <h3>Meu Hobbies Favoritos</h3>
             <ul>
