--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </tr>
         </table>
         <p class="interesse">
-            Por fim, gostaria de convidá-los ao meu repositótio público do GitHub. <br> <img src="icones/icone-github.png" alt="icone-github"><a href="https://github.com/Chrisfss" target="_blank" rel="external">/Chrisfss</a>
+            Por fim, gostaria de convidá-los ao meu repositótio público do GitHub. <br> <img src="icones/icone-github.png" alt="icone-github"><a href="https://github.com/Chrisfss" target="_blank" rel="external" id="mouse">/Chrisfss</a>
         </p>
     </main>
     <footer id="rodape">
